# Robotic-System_Warehouse

Robotic-System/: CMakeLists.txt  package.xml
Robotic-System/include/: RoiList.h  data_Input.h  decision_maker.h  device_controler.h  obstable_manager.h  offset.h  pic_recognize.h  robot_config.h  robot_control.h
Robotic-System/src/: IRIM.cpp  check_lift.cpp  decision_maker.cpp  decision_maker_tie.cpp  device_controler.cpp  impact.cpp  iros.cpp  main.cpp  obstable_manager.cpp  orange_calibration.cpp  orange_calibration2.cpp  pic_recognize.cpp  pic_recognize_tie.cpp  robot_control.cpp  task_receiver.1.cpp  task_receiver.cpp  vale_open.cpp
